--- a/client/package.json
+++ b/client/package.json
@@ -5,22 +5,23 @@
   "devDependencies": {
     "autoprefixer-stylus": "0.10.0",
     "babel-eslint": "^7.1.1",
-    "concurrently": "^3.5.1",
     "eslint": "^3.12.2",
-    "eslint-plugin-flowtype": "^2.29.1",
+    "eslint-plugin-flowtype": "^2.46.3",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.8.0",
+    "concurrently": "^3.5.1",
     "react-scripts": "0.6.1",
     "stylus": "0.54.5"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "history": "4.2.0",
     "material-ui": "^0.20.0",
     "nodemailer": "^4.6.4",
+    "prop-types": "^15.6.1",
     "re-base": "2.2.0",
     "react": "^15.6.2",
     "react-addons-css-transition-group": "15.3.2",
